Don't recognize "+3" after -- or after the first non-option argument. This prevents converting "+3" into "-k4.1" in places where getopt won't recognize it, which in turn prevents silly error messages and lossage trying to sort files whose names begin with +. PR 43358.